--- a/mule-dataframework/src/main/app/mule-deploy.properties
+++ b/mule-dataframework/src/main/app/mule-deploy.properties
@@ -1,5 +1,5 @@
-#Mon Oct 28 12:15:21 GMT 2013
+#Tue Oct 29 12:46:08 GMT 2013
 redeployment.enabled=true
 encoding=UTF-8
+config.resources=globalconfiguration.xml,mule-dataframework.xml,mule-db.xml,mule-solr.xml
 domain=default
-config.resources=mule-dataframework.xml
