--- a/mule-dataframework/src/main/app/mule-deploy.properties
+++ b/mule-dataframework/src/main/app/mule-deploy.properties
@@ -1,5 +1,5 @@
-#Thu Oct 31 15:44:42 GMT 2013
+#Mon Nov 04 11:09:44 GMT 2013
 redeployment.enabled=true
 encoding=UTF-8
+config.resources=globalconfiguration.xml,mule-dataframework.xml,mule-db.xml,mule-solr.xml
 domain=default
-config.resources=dml.xml,globalconfiguration.xml,mule-dataframework.xml,mule-db.xml,mule-solr.xml
